auto-test/tests/chapter_16/invalid_types/extra_credit/compound_assign_from_string.c

int main(void) {
    char * s =  "some string ";
    s += "another str";
    return 0;
}